fixing header z-index in firefox

--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -13,6 +13,8 @@ header {
   top: 0;
   height: 5rem;
 
+  z-index: 1 !important;
+
   .elastic-logo {
     width: 8em;
     height: auto;
